Adding Spring Security in Hotel service  and Rating service. prePostEnabled using EnableGlobalMethodSecurity for PreAuthorize

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,14 @@ spring.jpa.generateDdl=true
 spring.application.name: HOTEL-SERVICE
 spring.config.import: configserver:http://localhost:9095
 
+
+# EUREKA PROPERTIES ARE BEING FETCHED FROM CONFIG SERVER ON GIT
 #eureka.instance.prefer-ip-address: true
 #eureka.client.fetch-registry: true
 #eureka.client.register-with-eureka: true
 #eureka.client.service-url.defaultZone: http://localhost:8761/eureka
+
+
+# OKTA properties
+okta.oauth2.issuer: https://dev-47763722.okta.com/oauth2/default
+okta.oauth2.audience: api://default
